force-app/main/default/objects/AuthJingleTiime__mdt/AuthJingleTiime__mdt.object-meta.xml
<CustomObject>
    <label>AuthJingleTiime</label>
    <pluralLabel>AuthJingleTiime</pluralLabel>
</CustomObject>