force-app/main/default/objects/AuthJingleTiime__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>