force-app/main/default/objects/AuthJingleTiime__mdt/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>