force-app/main/default/objects/AuthJingleTiime__mdt/fields/host__c.field-meta.xml
<CustomField>
    <fullName>host__c</fullName>
    <label>host</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>